del unused perms

--- a/manifest.json
+++ b/manifest.json
@@ -4,31 +4,19 @@
   "version": "1.0",
   "description": "Detects and parses X.509 or CSR PEM data on a webpage.",
   "icons": {
-    "48": "logo.png"
+    "48": "imgs/logo.png"
   },
   "permissions": [
-    "activeTab",
-    "scripting",
     "contextMenus"
   ],
   "action": {
     "default_popup": "popup.html",
     "default_title": "PEM Inspector",
     "default_icon": {
-      "48": "logo.png"
+      "48": "imgs/logo.png"
     }
   },
   "background": {
     "service_worker": "background.js"
-  },
-  "content_scripts": [
-    {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "content.js"
-      ]
-    }
-  ]
+  }
 }
